--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.0.3",
     "next-auth": "^4.24.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
