--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
-    "next": "14.0.3",
+    "next": "^14.1.4",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
