--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
