--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.3",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "^14.1.4",
